--- a/ALTCommander/ALTCommander.csproj
+++ b/ALTCommander/ALTCommander.csproj
@@ -55,6 +55,18 @@
     <Compile Include="AltCommanderForm.Designer.cs">
       <DependentUpon>AltCommanderForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Def_Key.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Def_Key.Designer.cs">
+      <DependentUpon>Def_Key.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DirectorySelectDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DirectorySelectDialog.Designer.cs">
+      <DependentUpon>DirectorySelectDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortForm.cs">
@@ -65,6 +77,9 @@
     </Compile>
     <EmbeddedResource Include="AltCommanderForm.resx">
       <DependentUpon>AltCommanderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DirectorySelectDialog.resx">
+      <DependentUpon>DirectorySelectDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
