--- a/ALTCommander/ALTCommander.csproj
+++ b/ALTCommander/ALTCommander.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6027A1DB-805B-4D48-84D4-E258C3C346CE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ALTCommander</RootNamespace>
+    <RootNamespace>AltCommander</RootNamespace>
     <AssemblyName>ALTCommander</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
